Working on tokeniser

--- a/Parse/Parse.csproj
+++ b/Parse/Parse.csproj
@@ -46,5 +46,11 @@
     <Compile Include="Translator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Utility\Utility.csproj">
+      <Project>{e930f0ed-342c-4e45-920d-a56f25dad4ad}</Project>
+      <Name>Utility</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
